--- a/style.css
+++ b/style.css
@@ -35,34 +35,25 @@ html, body, input, textarea, select, button {
 	font-size: 0.5em;
 }
 
-.matier {
-	font-size: 1.5em;
-}
-
 .classe {
-	height: 0px;
-}
-
-.horaireE {
-	align-self: flex-start;
-	padding-top: 6%;
+	font-size: 0.5em;
 }
 
 .cours {
-	width: 10em;
-	height: 3.5em;
+	margin: 10px;
+	border: solid .1em;
+}
+
+#ElEmploisDuTemps {
 	display: flex;
-	flex-direction: column;
-	border: solid 3px;
+	justify-content: space-between;
 }
 
-.textHeure {
-	font-size: 0.5em;
-	width: 0px;
-	height: 0px;
+#Horaire {
+	padding: 10px;
+	border: solid 3px white;
 }
 
-.textCours {
-	align-self: center;
-	justify-self: center;
+.jour {
+	border: solid 3px white;
 }
