--- a/style.css
+++ b/style.css
@@ -1,30 +1,12 @@
 html, body, input, textarea, select, button {
   	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	font-size: 1.3em;
-  	border-color: #736b5e;
-  	color: #e8e6e3;
+  	color: #fff5e7;
   	background-color: #181a1b;
 }
 
 * {
   	scrollbar-color: #454a4d #202324;
-}
-
-.btn{
-  	border: 2px solid #736b5e;
-  	border-radius: 3px;
-  	color: white;
-  	transition: 555ms;
-  	cursor: pointer;
-}
-
-.btn:hover{
-  	background: rgb(85, 67, 44);
-}
-
-.btn:active{
-  	transition: 0s;
-  	background: rgb(45, 27, 4);
 }
 
 .auteur {
@@ -65,5 +47,18 @@ html, body, input, textarea, select, button {
 	}
 	.jour {
 		margin: 30px;
+	}
+}
+
+@media screen and (min-width: 2800px) {
+	#ElEmploisDuTemps {
+		font-size: 1.5em;
+	}
+	.auteur {
+		font-size: 1em;
+	}
+	
+	.classe {
+		font-size: 1em;
 	}
 }
